--- a/02_1.html
+++ b/02_1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo practico 02</title>
+    <title>Trabajo practico 02 (listas)</title>
     <style>
         h1 {
             color: darkred
@@ -36,10 +36,17 @@
             color: lightcoral
         }
     </style>
+    <style>
+        li {
+            color: white
+        }
+    </style>
 </head>
 
 <body bgcolor="black">
     <h1>Trabajo Practico 02</h1>
+
+
 
     <h3>1.1- ¿Para qué sirve la etiqueta ul?</h3>
     <p>La etiqueta ul sirve para generar listas no ordenadas. <br> Un ejemplo seria: mi casa tiene muchos muebles.
@@ -49,6 +56,8 @@
         <li>mesas</li>
         <li>sillas</li>
     </ul>
+
+
 
     <h3>1.2- ¿Para qué sirve la etiqueta ol?</h3>
     <p>la etiqueta <strong><i>ol</i></strong> sirve para generar listas ordenadas. <br> Un ejemplo seria: el sistema
@@ -60,6 +69,8 @@
         <li>Planetas</li>
         <li>Satelites</li>
     </ol>
+
+
 
     <h3>1.3- ¿Para qué sirve la etiqueta dl?</h3>
     <p>la etiqueta dl sirve para generar una lista descriptiva encerrando terminos en dt y sus descripciones en dd. ej:
@@ -79,39 +90,86 @@
         <dd><i>una joven con un cuerpo cosido por su padre, a pesar de su apariencia, posee un gran corazon</i></dd>
     </dl>
 
+
+
     <h3>1.4- ¿Para qué sirve la etiqueta li?</h3>
-    <p></p>
+    <p>La etiqueda <strong><i>li</i></strong> sirve para declarar cada elemento de una lista.</p>
+    <li><i>Donde viven los monstruos.</i></li>
+    <li>El Monstruo sin Nombre.</li>
+    <li>Pesadilla antes de Navidad.</li>
+
 
     <h3>1.5- Crea una lista desordenada con tres elementos (li) que contengan nombres de países de América del Sur.</h3>
-    <p></p>
+    <ul>
+        <li>Argentina</li>
+        <li>Paraguay</li>
+        <li>Bolivia</li>
+        <li>Mexico</li>
+    </ul>
+
+
 
     <h3>1.6- Crea una lista ordenada con cinco elementos (li) que contengan los días de la semana en orden alfabético.
     </h3>
-    <p></p>
+    <ol type="a">
+        <li>Enero</li>
+        <li>Febrero</li>
+        <li>Marzo</li>
+        <li>Abril</li>
+    </ol>
+
 
     <h3>1.7- Anida una lista desordenada dentro de otro elemento li de otra lista desordenada para crear una lista
         anidada de frutas y verduras.</h3>
-    <p></p>
+    <ul>
+        <li>Frutas
+            <ul>
+                <li>peras</li>
+                <li>kiwi</li>
+            </ul>
+        </li>
+        <li>Verduras
+            <ul>
+                <li>cilantro</li>
+                <li>zanahoria</li>
+            </ul>
+        </li>
+
+    </ul>
+
 
 
     <h3>1.8- Crea una lista ordenada, respetando las negritas y el subrayado, que contenga los siguientes pasos para
         hacer una tarta de manzana: <br> a) Pelar y cortar las manzanas en rodajas finas. <br> b) Mezclar la canela, el
         azúcar y la harina en un tazón. <br> c) Colocar la masa de la tarta en un molde para horno. <br> d) Colocar las
         manzanas sobre la masa de la tarta. <br> e) Hornear la tarta durante 45 minutos.</h3>
-    <p></p>
+    <p>Los pasos para cocinar una tarta de manzana son:</p>
+    <ol type="A">
+        <li><u>Pelar</u> y <u>cortar</u> las <strong>manzanas</strong> en rodajas finas.</li>
+
+        <li><u>Mezclar</u> la <strong>canela</strong>, el <strong>azucar</strong> y la <strong>harina</strong> en un
+            tazon.</li>
+
+        <li><u>Colocar</u> la <strong>masa</strong> de la <strong>tarta</strong> en un molde para horno.</li>
+
+        <li><u>Colocar</u> las <strong>manzanas</strong> sobre la masa de la tarta.</li>
+
+        <li><u>Hornear</u> <strong>la tarta</strong> durante 45 minutos.</li>
+    </ol>
 
     <h3>1.9- Existe un atributo que se aplica a la etiqueta ol para ver la lista en orden descendente en vez de
         ascendente, ¿cuál es ese atributo?</h3>
-    <p></p>
+    <p>el atributo que se utiliza para cambiar la vista de la etiqueta es <u><i>reversed</i></u></p>
 
     <h3>1.10- Utilizando el atributo anterior, crear una lista con cuatro elementos que contengan nombres de películas
         de terror de forma descendente.</h3>
-    <p></p>
+    <ol reversed>
+        <li>Halloween</li>
+        <li>Friday 13<sup>th</sup></li>
+        <li>Saw Games</li>
+        <li>A Quiet Place</li>
 
-
-
-    <h3></h3>
-    <p></p>
+    </ol>
 </body>
 
 </html>
