trabajo casi finalizado

--- a/materias/modalidad/programacion.html
+++ b/materias/modalidad/programacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web1</title>
+    <title>Programacion</title>
     <style>
         h1{
             color: lightseagreen;
@@ -15,8 +15,9 @@
     </style>
 </head>
 <body bgcolor="black">
-    <h1><i>Web I</i></h1>
-    <h3>Taller donde exploramos y conocemos el lenguaje html:5.</h3>
+    <h1><i> Programacion</i></h1>
+    <h3>ateria que nos enseña como programar
+        codigos en distintos lenguajes</h3>
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
