--- a/materias/modalidad/sistemas-elec.html
+++ b/materias/modalidad/sistemas-elec.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web1</title>
+    <title>Sistemas Electronicos</title>
     <style>
-        h1{
+        h1 {
             color: lightseagreen;
         }
-        h3{
+
+        h3 {
             color: lightseagreen;
         }
     </style>
 </head>
+
 <body bgcolor="black">
-    <h1><i>Web I</i></h1>
-    <h3>Taller donde exploramos y conocemos el lenguaje html:5.</h3>
+    <h1><i> Sistemas Electronicos</i></h1>
+    <h3>Materia que nos enseña a
+        crear
+        circuitos electronicos con componentes y
+        aprender sus propiedades.</h3>
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
+
 </html>
