--- a/materias/taller/redes.html
+++ b/materias/taller/redes.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes</title>
+    <style>
+        h1{
+            color: lightseagreen;
+        }
+        h3{
+            color: lightseagreen;
+        }
+    </style>
 </head>
-<body>
-    
+<body bgcolor="black">
+    <h1><i>Redes</i></h1>
+    <h3>Materia que nos enseña las diferentes topologias de
+        Redes,
+        como funcionan y para que se
+        utilizan en el dia a dia.</h3>
+
+    <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
 </html>
