--- a/materias/resto/problemas-amb.html
+++ b/materias/resto/problemas-amb.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web1</title>
+    <title>Problematicas Ambientales</title>
     <style>
         h1{
             color: lightseagreen;
@@ -15,8 +15,10 @@
     </style>
 </head>
 <body bgcolor="black">
-    <h1><i>Web I</i></h1>
-    <h3>Taller donde exploramos y conocemos el lenguaje html:5.</h3>
+    <h1><i>Problematicas Ambientales</i></h1>
+    <h3>Materia en donde concientizamos
+        acerca de nuestra vida cotidiana y como
+        nuestras costumbres deterioran el mundo.</h3>
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
