--- a/02_2.html
+++ b/02_2.html
@@ -28,7 +28,7 @@ p{
         ruta como necesario.</p>
 
     <h3>2.2- ¿qué es una url relativa?</h3>
-    <p></p>
+    <p>Una dirección URL relativa localiza un recurso mediante una dirección URL absoluta como punto de partida</p>
 
     <h3>2.3- Crear en el mismo proyecto, una carpeta llamada: materias</h3>
     <p></p>
