--- a/materias/modalidad/sistemas-elec.html
+++ b/materias/modalidad/sistemas-elec.html
@@ -23,6 +23,7 @@
         crear
         circuitos electronicos con componentes y
         aprender sus propiedades.</h3>
+    <img src="/assets/img/sistelec.jpeg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
