--- a/materias/modalidad/sistemas-info.html
+++ b/materias/modalidad/sistemas-info.html
@@ -22,6 +22,7 @@
     <h3>Materia que nos enseña a
         clasificar y organizar los distintos tipos de
         informacion para su correcto proceso</h3>
+    <img src="/assets/img/sistinfo.jpg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
