--- a/materias/resto/algebra.html
+++ b/materias/resto/algebra.html
@@ -23,6 +23,7 @@
         determinar
         cantidades o acciones y
         expresarlas en numeros</h3>
+    <img src="/assets/img/algebra.jpg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
