--- a/materias/resto/coe.html
+++ b/materias/resto/coe.html
@@ -22,6 +22,7 @@
     <h3>Materia que enseña la gramatica y todos los temas referidos a
         la
         comunicacion</h3>
+    <img src="/assets/img/COE.jpeg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
