--- a/materias/resto/ed-fisica.html
+++ b/materias/resto/ed-fisica.html
@@ -24,6 +24,8 @@
         conocer las capacidades fisicas de
         tu cuerpo.</h3>
 
+    <img src="/assets/img/edfisica.png" alt="">
+
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
 
