--- a/materias/modalidad/logica-mat.html
+++ b/materias/modalidad/logica-mat.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logica Matematica</title>
     <style>
-        h1{
+        h1 {
             color: lightseagreen;
         }
-        h3{
+
+        h3 {
             color: lightseagreen;
         }
     </style>
 </head>
+
 <body bgcolor="black">
-    
+
     <h1><i> Logica matematica</i></h1>
     <h3>Materia donde se explica y enseña los
         valores logicos de la matematica</h3>
-        
+
+    <img src="/assets/img/dehecho.jpg" alt="">
+
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 
+
 </body>
+
 </html>
