--- a/materias/resto/ingles.html
+++ b/materias/resto/ingles.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingles</title>
     <style>
-        h1{
+        h1 {
             color: lightseagreen;
         }
-        h3{
+
+        h3 {
             color: lightseagreen;
         }
     </style>
 </head>
+
 <body bgcolor="black">
     <h1><i>Ingles</i></h1>
     <h3>Materia que nos enseña tanto a leer como escribir e
         interpretar el idioma ingles.</h3>
+    <img src="/assets/img/inglish.jpg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
+
 </html>
