--- a/materias/resto/problemas-amb.html
+++ b/materias/resto/problemas-amb.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problematicas Ambientales</title>
     <style>
-        h1{
+        h1 {
             color: lightseagreen;
         }
-        h3{
+
+        h3 {
             color: lightseagreen;
         }
     </style>
 </head>
+
 <body bgcolor="black">
     <h1><i>Problematicas Ambientales</i></h1>
     <h3>Materia en donde concientizamos
         acerca de nuestra vida cotidiana y como
         nuestras costumbres deterioran el mundo.</h3>
+    <img src="/assets/img/PA.jpeg" alt="">
 
     <p><a href="../materias4to.html"><img src="/assets/img/icon_arrow_left_green_preview.png" alt=""></a></p>
 </body>
+
 </html>
